fixed_put_all_routes
